Further PR fixes